--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.9.1",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
+    "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   },
@@ -38,12 +39,12 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.24",
+    "@types/streamifier": "^0.1.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.3",
-    "typescript": "^5.3.3"
+    "tsx": "^4.19.3"
   }
 }
