--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/index.js",
+    "seed": "tsx prisma/seed.ts",
     "dev": "nodemon --exec tsx src/app.ts",
     "build": "prisma generate && tsc",
     "vercel-build": "echo Hello",
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cookie-parser": "~1.4.4",
@@ -45,6 +47,6 @@
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.4"
   }
 }
